--- a/2019/BlazorAdvent/Client/Shared/NavMenu.razor
+++ b/2019/BlazorAdvent/Client/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Day 1
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="second">
+                <span class="oi oi-plus" aria-hidden="true"></span> Day 2
+            </NavLink>
+        </li>
     </ul>
 </div>
 
