--- a/2019/BlazorAdvent/Client/Shared/NavMenu.razor
+++ b/2019/BlazorAdvent/Client/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Day 2
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="third">
+                <span class="oi oi-plus" aria-hidden="true"></span> Day 3
+            </NavLink>
+        </li>
     </ul>
 </div>
 
